initialize the announcement page and fix background issue on dark mode navigator

--- a/app/(base)/home/index.css
+++ b/app/(base)/home/index.css
@@ -58,6 +58,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 .navItem.active {
   color: var(--primary);
